objects/Dokumente__c.object
<CustomObject>
    <label>Unterlagen</label>
    <nameField>
        <label>Dokumente Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unterlagen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SeenBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seen By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dokumente</relationshipLabel>
        <relationshipName>Dokumente</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ja</fullName>
                    <default>true</default>
                    <label>ja</label>
                </value>
                <value>
                    <fullName>nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidUntil__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Einrichtung</fullName>
                </value>
                <value>
                    <fullName>Pfleger</fullName>
                </value>
                <value>
                    <fullName>Arzt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaregiverJob__c</fullName>
        <description>Is needed for the Caregiver Document Record Type.
Robin S. 30.09.2019</description>
        <label>Caregiver Job</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement__c</fullName>
        <label>Reimbursement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkToDocument__c</fullName>
        <label>Link To Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TypeOfDocument__c</fullName>
        <label>Type Of Document</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A1-Bescheinigung</fullName>
                </value>
                <value>
                    <fullName>Abfrage Vorarbeitgeber</fullName>
                </value>
                <value>
                    <fullName>Abschlussvollmacht Rahmenvertrag Ärzte ANÜ</fullName>
                </value>
                <value>
                    <fullName>Abschlussvollmacht Rahmenvertrag Ärzte ANÜ + MED ANÜ</fullName>
                </value>
                <value>
                    <fullName>Abschlussvollmacht Rahmenvertrag MED ANÜ</fullName>
                </value>
                <value>
                    <fullName>Allgmemeine Vollmacht zu ANÜ Verträgen</fullName>
                </value>
                <value>
                    <fullName>ANÜ Tarifvertrag</fullName>
                </value>
                <value>
                    <fullName>Approbationsurkunde</fullName>
                </value>
                <value>
                    <fullName>Arbeitserlaubnis</fullName>
                </value>
                <value>
                    <fullName>Arbeitsmedizinische Vorsorgebescheinigung (G42 und ggf. G24)</fullName>
                </value>
                <value>
                    <fullName>Arbeitsschutzunterweisung</fullName>
                </value>
                <value>
                    <fullName>Arbeits- und Brandschutzunterweisung</fullName>
                </value>
                <value>
                    <fullName>Arbeitszeugnisse</fullName>
                </value>
                <value>
                    <fullName>Aufenthaltstitel befristet</fullName>
                </value>
                <value>
                    <fullName>Aufenthaltstitel unbefristet</fullName>
                </value>
                <value>
                    <fullName>Berufshaftpflichtversicherung (vollumfänglich für Freiberuflichkeit)</fullName>
                </value>
                <value>
                    <fullName>doctari Dosimeter</fullName>
                </value>
                <value>
                    <fullName>Einsatzbogen</fullName>
                </value>
                <value>
                    <fullName>Einwilligung Abrechnungen online</fullName>
                </value>
                <value>
                    <fullName>Einwilligung Datenweitergabe</fullName>
                </value>
                <value>
                    <fullName>Erstunterweisung</fullName>
                </value>
                <value>
                    <fullName>Examensurkunde</fullName>
                </value>
                <value>
                    <fullName>Facharzturkunde/-n</fullName>
                </value>
                <value>
                    <fullName>Facharzturkunde Zusatzbezeichnung/-en</fullName>
                </value>
                <value>
                    <fullName>Fachkundennachweise</fullName>
                </value>
                <value>
                    <fullName>Fachkundennachweise Strahlenschutz</fullName>
                </value>
                <value>
                    <fullName>Fachweiterbildung</fullName>
                </value>
                <value>
                    <fullName>Fiktionsbescheinigung</fullName>
                </value>
                <value>
                    <fullName>Fortbildungszertifikat</fullName>
                </value>
                <value>
                    <fullName>Fort- und Weiterbildungsnachweis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <description>SSR-Number, SV-Number</description>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Status__c</fullName>
        <label>Tracking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>tbd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>notifiedEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T]_notifiedEmployee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedicalDiscipline__c</fullName>
        <description>This information is needed for the Doctor Document Record Type.
Robin S. 30.09.2019</description>
        <label>Medical Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResidenceDocument__c</fullName>
        <label>Residence Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>befristet</fullName>
                </value>
                <value>
                    <fullName>unbefristet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WirtschaftsraumEU__c</fullName>
        <formula>IF( AND( TEXT(Account__r.EconomicRegion__c) = &apos;EU/EWR/CH&apos;, OR(TEXT(TypeOfDocument__c) = &apos;Personalausweis&apos;, Text(TypeOfDocument__c) = &apos;Reisepass&apos;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]_WirtschaftsraumEU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BesidesRegulations__c</fullName>
        <label>Besides regulations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_DateUntilForCase__c</fullName>
        <description>takes the date from the ValidUntil__c field or if its empty, then from the CardUsageValidUntil__c</description>
        <formula>IF(ISNULL(ValidUntil__c) &amp;&amp; ISNULL( CardUsageValidUntil__c ), NULL,
IF(ISNULL(ValidUntil__c), CardUsageValidUntil__c,
IF(ISNULL(CardUsageValidUntil__c), ValidUntil__c,
IF(CardUsageValidUntil__c &lt; ValidUntil__c, CardUsageValidUntil__c,
ValidUntil__c
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]_DateUntilForCase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CardUsageValidUntil__c</fullName>
        <label>Card usage valid until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResidencePermitANUE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Der Aufenthaltstitel erlaubt das Vermittlungmodell ANÜ</inlineHelpText>
        <label>Residence Permit ANÜ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalDocumentSeen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Document Seen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalDesignations__c</fullName>
        <description>This information is needed for the Doctor Document Record Type.
Robin S. 30.09.2019</description>
        <label>Additional Designations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zusatzbezeichnung</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalInspectionDate__c</fullName>
        <label>Internal inspection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResidencePermitHonorar__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Der Aufenthaltstitel erlaubt das Vermittlungsmodell Honorar</inlineHelpText>
        <label>Residence Permit Honorar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechnicalQualifications__c</fullName>
        <description>This Information is needed for the Doctor Document Record Type.
Robin S. 30.09.2019</description>
        <label>Technical Qualifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachkunde</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalSheedAvailable__c</fullName>
        <label>Additional sheed available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>Nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaregiverFurtherEducation__c</fullName>
        <description>Is needed for the Caregiver Document Record Type.
Robin S. 30.09.2019</description>
        <label>Caregiver Further Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>DoctorDocument</fullName>
        <active>true</active>
        <label>Doctor Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>GeneralDocument</fullName>
        <active>false</active>
        <label>General Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>ResidencePermit</fullName>
        <active>true</active>
        <label>Residence Permit</label>
    </recordTypes>
    <recordTypes>
        <fullName>CaregiverDocument</fullName>
        <active>true</active>
        <label>Caregiver Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Occupational_safety</fullName>
        <active>true</active>
        <label>Occupational safety</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthcareInstitutionDocument</fullName>
        <active>true</active>
        <label>Healthcare Institution Document</label>
    </recordTypes>
    <validationRules>
        <fullName>DocumentTypeSVNumber</fullName>
        <active>true</active>
        <description>changes on records with documenttype &quot;SV-Nummer&quot; only for Recruitment and Office</description>
        <errorConditionFormula>IF(
				AND(ISPICKVAL(TypeOfDocument__c, &apos;SV-Nummer&apos;),
								NOT(
												OR($Profile.Name = &quot;doctari Recruiting&quot;, $Profile.Name = &quot;doctari Office User&quot;  ||  $Profile.Id = &apos;00e1r0000027FuT&apos;)
								)
							), true, false)</errorConditionFormula>
        <errorMessage>Dieses Dokument kann leider nur vom Recruitment oder vom Office bearbeitet werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountFieldMustBeSet</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; OriginalDocumentSeen__c == true &amp;&amp; ISBLANK(SeenBy__c)</errorConditionFormula>
        <errorDisplayField>SeenBy__c</errorDisplayField>
        <errorMessage>Dieses Feld ist Pflicht, wenn ein original Dokument gesehen wurde</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResidentDocumentToInFuture</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; ValidUntil__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>ValidUntil__c</errorDisplayField>
        <errorMessage>Gültig bis darf nicht in der Vergangenheit liegen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResidentDocumentFromGreaterThenTo</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; ValidFrom__c &gt;  ValidUntil__c</errorConditionFormula>
        <errorDisplayField>ValidFrom__c</errorDisplayField>
        <errorMessage>Gültig von darf nicht nach gültig bis sein</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResidentDocumentUntilFilledFromNot</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; ( !ISBLANK(ValidUntil__c) &amp;&amp; ISBLANK(ValidFrom__c))</errorConditionFormula>
        <errorDisplayField>ValidFrom__c</errorDisplayField>
        <errorMessage>Gültig ab muss gesetzt sein, wenn gültig bis gesetzt ist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResidentDocumentLimitedNeedValidUntil</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; ISPICKVAL(ResidenceDocument__c, &quot;begrenzt&quot;) &amp;&amp;  ISBLANK(ValidUntil__c)</errorConditionFormula>
        <errorDisplayField>ValidUntil__c</errorDisplayField>
        <errorMessage>Wenn Aufenthaltstitel begrenzt ist, darf gültig bis nicht leer sein</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResidentDocumentUnlimitedNeedValidFrom</fullName>
        <active>false</active>
        <errorConditionFormula>$User.ProfileId &lt;&gt; &quot;00e1r0000027FuT&quot; &amp;&amp; ISPICKVAL(ResidenceDocument__c, &quot;unbegrenzt&quot;) &amp;&amp; ISBLANK(ValidFrom__c)</errorConditionFormula>
        <errorDisplayField>ValidFrom__c</errorDisplayField>
        <errorMessage>Wenn Aufenthaltstitel unbegrenz ist darf gültig von nicht leer sein</errorMessage>
    </validationRules>
</CustomObject>